# jetson-examples

./: .gitignore  LICENSE  MANIFEST.in  README.md  build.sh  install.sh  pyproject.toml  setup.py
docs/: develop.md  examples.md  install.md  publish.md
reComputer/: EXAMPLES_TABLE.md  compatibility_matrix.yaml  config.py  examples_info.json  main.py
reComputer/scripts/: check.sh  clean.sh  generate_example_table.py  jetson_compatibility.py  live-llava.sh  nanodb.sh  run.sh  setup.sh  update.sh  update_jetpack6_support.py  utils.sh
reComputer/scripts/MoveNet-Lightning/: clean.sh  init.sh  readme.md  run.sh
reComputer/scripts/MoveNet-Thunder/: clean.sh  readme.md  run.sh
reComputer/scripts/MoveNetJS/: clean.sh  readme.md  run.sh
reComputer/scripts/Sheared-LLaMA-2.7B-ShareGPT/: config.yaml  run.sh
reComputer/scripts/audiocraft/: README.md  clean.sh  init.sh  run.sh
reComputer/scripts/comfyui/: README.md  clean.sh  config.yaml  init.sh  run.sh
reComputer/scripts/deep-live-cam/: Dockerfile  README.md  clean.sh  config.yaml  init.sh  run.sh
reComputer/scripts/depth-anything/: Dockerfile  README.md  clean.sh  config.yaml  init.sh  run.sh
reComputer/scripts/depth-anything-v2/: README.md  clean.sh  config.yaml  init.sh  run.sh
reComputer/scripts/depth-anything-v3/: Dockerfile  README.md  clean.sh  config.yaml  init.sh  run.sh
reComputer/scripts/gemma4/: README.md  clean.sh  config.yaml  run.sh
reComputer/scripts/gpt-oss/: Dockerfile  README.md  clean.sh  config.yaml  run.sh
reComputer/scripts/graspnet-gemini/: README.md  clean.sh  config.yaml  run.sh
reComputer/scripts/live-vlm-webui/: README.md  clean.sh  config.yaml  docker-compose.yml  run.sh
reComputer/scripts/llama-factory/: README.md  clean.sh  config.yaml  init.sh  run.sh
reComputer/scripts/llama3/: init.sh  run.sh
reComputer/scripts/llama3.2/: clean.sh  config.yaml  run.sh
reComputer/scripts/llava/: clean.sh  config.yaml  run.sh
reComputer/scripts/llava-v1.5-7b/: run.sh
reComputer/scripts/llava-v1.6-vicuna-7b/: run.sh
reComputer/scripts/nanodb/: config.yaml  readme.md  run.sh
reComputer/scripts/nanoowl/: run.sh
reComputer/scripts/nemotron-3-nano/: README.md  clean.sh  config.yaml  init.sh  run.sh
reComputer/scripts/nvblox/: README.md  clean.sh  config.yaml  init.sh  (+3 more)
scripts/: live_llava.sh  run.sh
(+66 files in other folders)
