[project]
name = "jetson-examples"
version = "0.0.1"
authors = [{ name = "luozhixin", email = "zhixin.luo@seeed.cc" }]
description = "run AI on Jetson, all you need is reComputer"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.scripts]
reComputer = "reComputer.main:run_script"

[project.urls]
Homepage = "https://github.com/Seeed-Projects/jetson-examples"
Issues = "https://github.com/Seeed-Projects/jetson-examples/issues"
